修正了答题页面无法关闭

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -176,7 +176,7 @@
             $("#todoanswer").show();
         });
         $(document).on('click', '#closeanswer', function(){
-            $("#uponeimage").hide();
+            $("#todoanswer").hide();
         });
         $(document).on('click', '#sureanswer', function(){
             var pthis = $(this);
