完成每个分类下的排行榜显示（按点赞数从高到低）。

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -306,6 +306,7 @@
         for(var i = 0; i < classifyList.length; i++){
             $(document).on('click', "#classify_" + classifyList[i].classifyid +"", function(){
                 $("#imageslist").empty();
+                $("#imageslist").append("<input id='paihangbang' class='ui-button' style='float: right' type='button' value='排行榜'>");
                 $.ajax({
                     url: "images/getImagesListByClassifyname",
                     type: "post",
@@ -339,6 +340,41 @@
                 });
             });
         }
+
+        $(document).on('click', '#paihangbang', function(){
+            $("#imageslist").empty();
+            $.ajax({
+                url: "images/getImagesListByClassifynameAndZan",
+                type: "post",
+                data: {
+                    classifyname: classifyList[i].classifyname
+                },
+                dataType: "json",
+                async: false,
+                success: function (data) {
+                    var selectedObj = $("#imageslist");
+                    if (data.length === 0) {
+                        selectedObj.append("该模块暂无图片！");
+                    }
+                    for (var i = 0; i < data.length; i++) {
+                        selectedObj.append("<div id='image_'" + data[i].imageid + ">" +
+                            "发布者:<input class='un' disabled value='" + data[i].username + "'>" +
+                            "发布时间:<input class='ut' type='datetime' value='" + data[i].uptime + "' >" +
+                            "<input class='zan' type='number' readonly value='" +data[i].zan + "'>" +
+                            "<input type='button' class='ui-button zan' value='赞'>" +
+                            "<input class='cai' type='number' readonly value='" +data[i].cai + "'>" +
+                            "<input type='button' class='ui-button cai' value='踩'><br>" +
+                            "<img class='ig' style='width: 70%;height: auto' src='images/" + data[i].image + "' alt='图片'/><br>" +
+                            "<div class='showcomment' style='width: 100%;height: auto;background-color: #CCC;border: 1px solid #000'>评论区</div><br>" +
+                            "<textarea id='comment' style='width: 80%;height:100px;font-size: 24px; background-color: #FFF' placeholder='发表评论'></textarea><br>" +
+                            "<button id='submitcomment' style='width: 80px;height: 30px;font-size: 24px'>发表</button><br>" +
+                            "</div>");
+                    }
+                },
+                error: function (error) {
+                }
+            });
+        });
 
         $(document).on('click', '.zan', function(){
             var pthis = $(this);
